tests/e2e/errors/compile_duplicate_var.lox
{
    var a = 1;
    var a = 2; // expect compile error: Variable with name 'a' already exists in this scope
}
